[package]
name = "aetherbox"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
log = "0.4.28"
wgpu = "27.0.1"
winit = { version = "0.30.12", features = ["android-native-activity"] }
pollster = "0.4.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
cgmath = "0.18.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = "27.0.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
